# sqlx-actix-chinook-test

./: .env  .gitignore  Cargo.toml  Makefile  README.md  chinook.db  tracks.lua  tracks.yml
src/: chinook.rs  main.rs
