[package]
authors = ["rich-murphey <rich@murphey.org>"]
name = "sqlx-actix-chinook-test"
version = "0.1.0"
edition = "2018"
publish = false

[features]
default = []

[dependencies]
actix-web = { version = "4.0.0-beta.4", features = ["secure-cookies"] }
anyhow = "1.0.38"
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.13"
log = "0.4.14"
num_cpus = "1.13.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["raw_value"] }
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "sqlite" ] }
sqlx-actix-streaming = { git = "https://github.com/rich-murphey/sqlx-actix-streaming", features = ["macros", "runtime-actix-rustls", "sqlite" ] }
validator = { version = "0.12.0", features = ["derive"] }
